# pacman-ai-NEAT

./: .gitmodules  README.md  pyproject.toml
pacman_ai_neat/: main.py  phase.py  phase_transition.py  playback.py  playback_player.py  player.py  settings.py  simulator.py  win_finder.py
pacman_ai_neat/only_dots/: __init__.py  playback.py  playback_player.py  player.py  settings.py  simulator.py
pacman_ai_neat/only_ghosts/: playback.py  playback_player.py  player.py  settings.py  simulator.py
tests/: cardinal_vision.py  ordinal_vision.py
